  protocols/http.pike are: most request/header parsing done in (more
  so than http.pike), uses ram cache code from Roxen 2.1 + various
  rewrites for speed. This one, with the ram cache, is much faster
  than the other http protocol.
+ new options to modules/filesystems/userfs.pike : banish list can
  be disabled if needed, the virtual user system has now the option
  to add a kind of "workaround" to add some prefix to username on the
  url, and when the option "Look at the user dir" is set to No, the 
  home filesystem can be hashed. Very good for home pages hosting.
+ Fixed the bug that sometimes added \r\n to the POST data.
+ Added support for and use the Roxen 2.x module registration syntax:
  module_type, module_name, module_doc and module_unique.
+ Re-added (it disappeared in Roxen 1.3) an option to disable the extra
  Caudium environment variables in CGI-scripts since they sometimes cause
  unwanted problems.
+ Replace '-=$ ' with '_' in the Caudium specific environment variables to
  avoid potential problems.
+ Added strftime argument to date-related tags (<modified>, <date>
  etc). Allows you to do custom formatting. See 'man strftime' normal
  UNIX box for details on strftime.
+ Added new option to <noparse>, until. See <help for=noparse> for
  more information.
+ Fixed a bug in the help tag.
+ Cast the mysql insert id result to a string in the sqlquery
  tag. Earlier it was inserted into id->variables as an integer, which
  naturally isn't a good idea.
+ New ip-less hosting module, Virtual Host Matcher, which does regular
  expression based matching. Default is to do exact-only matching. You
  can then write a regexp that "rewrites" a host header for this exact
  matching. Also allows for default matching by using .* as the regular
  expression match.
+ New module type, MODULE_PRECACHE. Needed to combine virtual hosting
  and the http2 memory cache. Can also potentially be used to use custom keys
  for caching.
