@@ -68,4 +68,5 @@ Changes since last Roxen 1.3
 + New module type, MODULE_PRECACHE. Needed to combine virtual hosting
   and the http2 memory cache. Can also potentially be used to use custom keys
   for caching.
-
++ Added define to disable the ip->host lookup in the config
+  interface. See README.performance.
